--- a/paper/references.bib
+++ b/paper/references.bib
@@ -158,7 +158,7 @@
 	author = {Myers, Glenford J. and Sandler, Corey and Badgett, Tom},
 	title = {The Art of Software Testing},
 	year = {2011},
-	isbn = {1118031962, 9781118031964},
+	isbn = {1118031962},
 	edition = {3rd},
 	publisher = {Wiley Publishing},
 }
@@ -226,7 +226,7 @@
 	isbn="978-3-030-03673-7"
 }
 
-@book{10.5555/1162257,
+@book{martin2014,
 	author = {Martin, Robert C. and Martin, Micah},
 	title = {Agile Principles, Patterns, and Practices in C\# (Robert C. Martin)},
 	year = {2006},
