--- a/paper/software-engineering/continuous-integration.tex
+++ b/paper/software-engineering/continuous-integration.tex
@@ -2,19 +2,19 @@
 \subsection{Agile Manifesto}
 Since the late 1990's, developers have tried to reduce the time occupied by the implementation and testing phases. In order to accomplish this, several new implementations of the SDLC were proposed and evaluated, later collectively referred to as \emph{Agile development methodologies}. The term \emph{Agile development} was coined during a meeting of seventeen prominent software developers, held between February 11-13, 2001, in Snowbird, Utah \cite{jimhighsmith2001}. As a result of this meeting, the developers defined the four key values and twelve principles that define these new methodologies, called the \emph{Manifesto for Agile Software Development}, also known as the \emph{Agile Manifesto}.\\
 
-\noindent According to the authors, the four key values of Agile software development should be interpreted as follows: ``While there is value in the items on the right, we value the items on the left more'' \cite{beck2001agile}. Meyer provides a the following definition for the four values: ``general assumptions framing the agile view of the world``, while defining the principles as ``core agile rules, organizational and technical`` \cite[p.~2]{Meyer2014}. Martin identifies the principles as ``the characteristics that differentiate a set of agile practices from a heavyweight process`` \cite[p.~33]{10.5555/1162257}. A variety of different programming models, based on the agile ideologies, have arisen since 2001 and each one incorporates these values and principles in their own unique way. I will very briefly explain these values and their corresponding principles, using the mapping proposed by Kiv \cite[p.~12]{10.1007/978-3-030-03673-7_2}.
+\noindent According to the authors, the four key values of Agile software development should be interpreted as follows: ``While there is value in the items on the right, we value the items on the left more'' \cite{beck2001agile}. Meyer provides a the following definition for the four values: ``general assumptions framing the agile view of the world``, while defining the principles as ``core agile rules, organizational and technical`` \cite[p.~2]{Meyer2014}. Martin identifies the principles as ``the characteristics that differentiate a set of agile practices from a heavyweight process`` \cite[p.~33]{martin2014}. A variety of different programming models, based on the agile ideologies, have arisen since 2001 and each one incorporates these values and principles in their own unique way. I will very briefly explain these values and their corresponding principles, using the mapping proposed by Kiv \cite[p.~12]{10.1007/978-3-030-03673-7_2}.
 
 \subsubsection{\emph{Individuals and interactions} over processes and tools}
 Instead of meticulously following an outlined development process and utilising the best tools available, the main focus of attention should shift to the people behind the development and how they are interacting with each other. According to Glass, the quality of the programmers and the team is the most influential factor in the successful development of software \cite{glass2001agile}. 
 
 \agileprinciple{5}{Build projects around motivated individuals. Give them the environment and support they need, and trust them to get the job done.}
-TODO EXPLAIN
+The key to successful software development is ensuring that the people working on the project are both skilled and motivated. Research has shown that, while proficient programmers can cost twice as much as their less-skilled counterparts, their productivity lies between 5 to 30 times higher \cite{glass2001agile}. Any factor that negatively impacts a healthy environment or decreases motivation should be changed \cite[p.~34]{martin2014}.
 
 \agileprinciple{6}{The most efficient and effective method of conveying information to and within a development team is face-to-face conversation.}
-TODO EXPLAIN
+Oral communication and human interaction should at all times be preferred over digital messaging, ideally in an informal setting. This will encourage the developers to raise questions instead of making (possibly) wrong assumptions \cite{glass2001agile}.
 
 \agileprinciple{8}{Agile processes promote sustainable development. The sponsors, developers, and users should be able to maintain a constant pace indefinitely.}
-TODO EXPLAIN
+The team should aim for a fast, yet sustainable pace instead of rushing to finish the project. This reduces the risk of burnouts and ensures high-quality software will be delivered \cite{martin2014}.
 
 \agileprinciple{11}{The best architectures, requirements, and designs emerge from self-organizing teams.}
 TODO EXPLAIN
