--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -3,7 +3,7 @@
 \renewcommand{\documenttitle}{Paper: Working draft}
 
 % Agile principles.
-\newcommand{\agileprinciple}[2]{\paragraph*{Principle #1: #2}}
+\newcommand{\agileprinciple}[2]{\paragraph*{Principle #1: #2}\mbox{}\\}
 
 % Add the references.
 \addbibresource{references.bib}
