--- a/paper/references.bib
+++ b/paper/references.bib
@@ -234,3 +234,12 @@
 	publisher = {Prentice Hall PTR},
 	address = {USA}
 }
+
+@article{fowlerhighsmithagile,
+	author = {Fowler, Martin and Highsmith, Jim},
+	year = {2000},
+	month = {11},
+	pages = {},
+	title = {The Agile Manifesto},
+	volume = {9}
+}
