--- a/paper/software-engineering/continuous-integration.tex
+++ b/paper/software-engineering/continuous-integration.tex
@@ -11,16 +11,16 @@ Instead of meticulously following an outlined development process and utilising 
 The key to successful software development is ensuring that the people working on the project are both skilled and motivated. Research has shown that, while proficient programmers can cost twice as much as their less-skilled counterparts, their productivity lies between 5 to 30 times higher \cite{glass2001agile}. Any factor that negatively impacts a healthy environment or decreases motivation should be changed \cite[p.~34]{martin2014}.
 
 \agileprinciple{6}{The most efficient and effective method of conveying information to and within a development team is face-to-face conversation.}
-Oral communication and human interaction should at all times be preferred over digital messaging, ideally in an informal setting. This will encourage the developers to raise questions instead of making (possibly) wrong assumptions \cite{glass2001agile}.
+Real-life conversations and human interaction, ideally in an informal setting, should be preferred over forms of digital communication. Direct communication techniques will encourage the developers to raise questions instead of making (possibly) wrong assumptions \cite{fowlerhighsmithagile,glass2001agile}.
 
 \agileprinciple{8}{Agile processes promote sustainable development. The sponsors, developers, and users should be able to maintain a constant pace indefinitely.}
 The team should aim for a fast, yet sustainable pace instead of rushing to finish the project. This reduces the risk of burnouts and ensures high-quality software will be delivered \cite{martin2014}.
 
 \agileprinciple{11}{The best architectures, requirements, and designs emerge from self-organizing teams.}
-TODO EXPLAIN
+The idea of requiring a hierarchy within a team should be abolished. Every team member must be considered equal and must have input on how to divide the work and the corresponding responsibilities \cite{martin2014}. Subsequently, Fowler and Highsmith state that a minimal amount of process rules and an increase in human interactions has a positive influence on innovation and creativity \cite{fowlerhighsmithagile}. 
 
 \agileprinciple{12}{At regular intervals, the team reflects on how to become more effective, then tunes and adjusts its behavior accordingly.}
-TODO EXPLAIN
+An agile team is versatile and aware that the environment changes continuously, and that they should act accordingly \cite{martin2014}. An important aspect to keep in mind is that the decision on whether to incorporate changes, should be taken by the team itself instead of by an upper hand, since all members share equal responsibilities \cite{glass2001agile}.
 
 \subsubsection{\emph{Working software} over comprehensive documentation}
 The primary goal of software engineering is to deliver a working end product which fulfils the needs of the customer. In order to accomplish this, development should start as soon as possible. Traditional programming models demand a lot of documentation to be written prior to the actual development, which will inevitably lead to inconsistencies between the documentation and the actual application as the project grows and the requirements change \cite{Hazzan2014}. 
@@ -51,6 +51,8 @@ TODO EXPLAIN
 
 \agileprinciple{9}{Continuous attention to technical excellence and good design enhances agility.}
 TODO EXPLAIN
+
+% http://users.jyu.fi/~mieijala/kandimateriaali/Agile-Manifesto.pdf
 
 % EXPLAIN DINGEN MET
 % https://ivanderevianko.com/wp-content/uploads/2013/10/Agile-Principles-Patterns-and-Practices-in-C.pdf
