--- a/paper/software-engineering/sdlc.tex
+++ b/paper/software-engineering/sdlc.tex
@@ -1,5 +1,5 @@
 \section{Software Development Life Cycle}\label{sec:se-sdlc}
-An implementation of the SDLC consists of two major components. First, the process is broken down into several smaller phases. Depending on the nature of the software, it is possible to omit steps or add more steps. I have compiled a simple yet generic approach from multiple sources \cite{2010govardhan} \cite{7106435}, to which most software projects adhere. This approach consists of five phases.
+An implementation of the SDLC consists of two major components. First, the process is broken down into several smaller phases. Depending on the nature of the software, it is possible to omit steps or add more steps. I have compiled a simple yet generic approach from multiple sources \cite{2010govardhan, 7106435}, to which most software projects adhere. This approach consists of five phases.
 \begin{enumerate}
 	\bolditem{Requirements phase} This is the initial phase of the development process. During this phase, the developer gets acquainted with the project and compiles a list of the desired functionalities \cite{7106435}. Using this information, the developer eventually decides on the required hardware specifications and possible external software which will need to be acquired.
 	
