--- a/paper/references.bib
+++ b/paper/references.bib
@@ -243,3 +243,21 @@
 	title = {The Agile Manifesto},
 	volume = {9}
 }
+
+@article{standish2015chaos,
+	title={CHAOS report 2015},
+	author={Standish Group and others},
+	journal={The Standish Group International},
+	url={https://www.standishgroup.com/sample_research_files/CHAOSReport2015-Final.pdf},
+	year={2015}
+}
+
+@mastersthesis{rug01:002215083,
+	author={Shafagatova, Aygun
+	and De Backer, Manu
+	and Pauwaert, Tom},
+	title={The importance and presence of agile principles in agile software development},
+	year={2015},
+	school={Universiteit Gent},
+	url={https://lib.ugent.be/catalog/rug01:002215083}
+}
