--- a/paper/related-work.tex
+++ b/paper/related-work.tex
@@ -2,6 +2,14 @@
 
 (TODO)
 
+  - Test Case Prioritization -> Focus want geen tests weggooien
+
+- Test Suite Minimization
+
+- Test Suite Selection
+
+- Test Suite Reduction
+
 - OpenClover (enkel Java) heeft hier misschien support voor
 
 - Machine Learning approaches
