--- a/paper/software-engineering/sdlc.tex
+++ b/paper/software-engineering/sdlc.tex
@@ -1,3 +1,5 @@
+% !TeX root = ../thesis.tex
+
 \section{Software Development Life Cycle}\label{sec:se-sdlc}
 An implementation of the SDLC consists of two major components. First, the process is broken down into several smaller phases. Depending on the nature of the software, it is possible to omit steps or add more steps. I have compiled a simple yet generic approach from multiple sources \cite{2010govardhan, 7106435}, to which most software projects adhere. This approach consists of five phases.
 \begin{enumerate}
