--- a/paper/references.bib
+++ b/paper/references.bib
@@ -252,6 +252,14 @@
 	year={2015}
 }
 
+@article{cusumanomicrosoft,
+	author = {Cusumano, and Michael, Akindutire and Smith, Stanley},
+	year = {1995},
+	month = {02},
+	pages = {},
+	title = {Beyond the waterfall : software development at Microsoft}
+}
+
 @mastersthesis{rug01:002215083,
 	author={Shafagatova, Aygun
 	and De Backer, Manu
