--- a/paper/related-work.tex
+++ b/paper/related-work.tex
@@ -1,6 +1,11 @@
 \chapter{Related work}
 
+	
+
 (TODO)
+
+- Maar; dat testen kan heel lang duren (zoek een bron waarin lange tests besproken worden)
+- Bestaan aantal oplossingen voor:
 
   - Test Case Prioritization -> Focus want geen tests weggooien
 
