--- a/paper/software-engineering/agile-software-development/continuous-integration.tex
+++ b/paper/software-engineering/agile-software-development/continuous-integration.tex
@@ -1,32 +1,39 @@
 % !TeX root = ../../thesis.tex
 
 \subsection{Continuous Integration}
-In traditional software development, the design phase typically leads to a representation of the required functionality in multiple stand-alone modules. Subsequently, every module is implemented separately by individual developers. Afterwards, an attempt is made to integrate all the modules into the final application, an event to which Meyer refers to as the \emph{Big Bang} \cite[~p.103]{Meyer2014}. However, performing this operation has proven to be difficult, since every developer can take unexpected assumptions, which results in mutually incompatible components.\\
+In traditional software development, the design phase typically leads to a representation of the required functionality in multiple, stand-alone modules. Subsequently, every module is implemented separately by individual developers. Afterwards, an attempt is made to integrate all the modules into the final application, an event to which Meyer refers to as the ``Big Bang'' \cite[~p.103]{Meyer2014}. The name \emph{Big Bang} reflects the complex nature of this operation, since every developer can take unexpected assumptions, resulting in mutually incompatible components.\\
 
-\noindent Contrarily, agile development methodologies advocate the idea of small, but frequent deliveries (\autoref{sssec:agilevalue-workingsoftware}). This in turn imposes that the integration of the modules is performed multiple times during the implementation phase on a \emph{continuous} basis, rather than just once at the end. 
+\noindent Contrarily, agile development methodologies advocate the idea of frequent, yet small deliveries (\autoref{sssec:agilevalue-workingsoftware}). Consequently, this implies that the code is built often and that the modules are integrated multiple times, on a \emph{continuous} basis, rather than just once at the end. This practice of frequent builds is referred to as \emph{Continuous Integration} \cite{martin2014,Meyer2014}. It should be noted that this idea exists and has been applied before the agile manifesto was written. The first notorious software company that has adopted this practice is Microsoft, already in 1989 \cite[~p.11]{cusumanomicrosoft}. Cusumano reports that Microsoft typically builds the entire application at least once per day \cite[~p.12]{cusumanomicrosoft}, which in turn requires developers to integrate and test their changes multiple times per day.\\
 
-% Microsoft ^
-% https://www.researchgate.net/publication/5176165_Beyond_the_waterfall_software_development_at_Microsoft
+\noindent The introduction of Continuous Integration in software development has important consequences on the life cycle. Where the waterfall model used a cascading life cycle, Continuous Integration employs a circular, repetitive structure consisting of three phases, as visualised in \autoref{fig:agile-ci-lifecycle}.
 
+% zie een van die papers
 
-%hier in hoofdstuk 7 staat iets over continuous integration
-%https://link.springer.com/chapter/10.1007/978-3-319-05155-0_7
+\begin{enumerate}
+	\bolditem{Implementation} In the first phase, every developer individually writes code for the module they were assigned to. At a regular interval, the code is committed to the remote repository.
+	
+	\bolditem{Integration} When the code is committed, the developer simultaneously fetches the changes to other modules. Afterwards, the developer must integrate the changes with his own module, to ensure compatibility. In case a conflict occurs, the developer is responsible for its resolution \cite{martin2014}.
+	
+	\bolditem{Test} After the module has successfully been integrated, the test suite is run to ensure no bugs have been introduced.
+\end{enumerate}
 
-- changes moeten zeer regelmatig worden geintegreerd met elkaar -> feedback loop tussen implement -> integrate -> test -> repeat
-- Continuous integration: wat?
-- Bestaan aantal bestaande frameworks voor
-- Maar; dat testen kan heel lang duren (zoek een bron waarin lange tests besproken worden)
-- Bestaan aantal oplossingen voor -> zie volgende hoofdstuk
+\begin{figure}[htbp!]
+	\centering
+	\includegraphics[width=0.5\textwidth]{assets/ci-lifecycle.pdf}
+	\caption{Development Life Cycle with Continuous Integration}
+	\label{fig:agile-ci-lifecycle}
+\end{figure}
 
-- feedback loop
+\noindent Adopting Continuous Integration can prove to be a lengthy and repetitive task. Luckily, a variety of tools and frameworks exist to automate this process. These tools are typically added as a \texttt{post-receive} hook to the version control system (e.g. Git, Subversion, \dots). Every time a commit is pushed by a developer, the code is built and tests are executed. I will now discuss four prominent Continuous Integration systems.
 
-- buildup naar waarom tooling nodig is
+\subsubsection{Jenkins}
+// TODO EXPLAIN
 
-- waarom
+\subsubsection{CircleCI}
+// TODO EXPLAIN
 
-- wat
+\subsubsection{Travis-CI}
+// TODO EXPLAIN
 
-- voorbeelden: Jenkins, CircleCI, Travis-CI, recent GitHub Actions + screenshots
-
-- Probleem en oplossingen met regression tests
-
+\subsubsection{GitHub Actions}
+// TODO EXPLAIN
