--- a/paper/references.bib
+++ b/paper/references.bib
@@ -269,3 +269,24 @@
 	school={Universiteit Gent},
 	url={https://lib.ugent.be/catalog/rug01:002215083}
 }
+
+@book{SmartJenkinsDefinitive,
+	abstract = {Streamline software development with Jenkins, the popular Java-based open source tool that has revolutionized the way teams think about Continuous Integration (CI). This complete guide shows you how to automate your build, integration, release, and deployment processes with Jenkins---and demonstrates how CI can save you time, money, and many headaches.},
+	added-at = {2017-04-30T14:39:42.000+0200},
+	address = {Beijing},
+	address-de = {K{\"o}ln},
+	author = {Smart, John Ferguson},
+	biburl = {https://www.bibsonomy.org/bibtex/299a6c4a7da335fdb5d824d4cb5877465/flint63},
+	file = {O'Reilly eBook:2011/Smart11.pdf:PDF;O'Reilly Product page:http\://www.oreilly.de/shop.oreilly.com/product/:URL;Amazon Search inside:http\://www.amazon.de/gp/reader/1449305350/:URL},
+	groups = {public},
+	interhash = {2fdfa04bd2c68790b23ea70145a03fb8},
+	intrahash = {99a6c4a7da335fdb5d824d4cb5877465},
+	isbn = {978-1-4493-0535-2},
+	keywords = {01841 105 book shelf safari agile software development team build process workflow tool java},
+	publisher = {O'Reilly},
+	timestamp = {2018-04-16T12:02:02.000+0200},
+	title = {Jenkins: The Definitive Guide},
+	url = {https://www.safaribooksonline.com/library/view/jenkins-the-definitive/9781449311155/},
+	username = {flint63},
+	year = 2011
+}
