--- a/paper/related-work.tex
+++ b/paper/related-work.tex
@@ -5,9 +5,10 @@
 (TODO)
 
 - Maar; dat testen kan heel lang duren (zoek een bron waarin lange tests besproken worden)
+
 - Bestaan aantal oplossingen voor:
 
-  - Test Case Prioritization -> Focus want geen tests weggooien
+  - Test Case Prioritization $\Rightarrow$ Dit doen we, want geen tests weggooien
 
 - Test Suite Minimization
 
