--- a/paper/software-engineering/agile-software-development/continuous-integration.tex
+++ b/paper/software-engineering/agile-software-development/continuous-integration.tex
@@ -46,11 +46,30 @@ Jenkins CI\footnote{\url{https://jenkins.io/}} was launched in 2011 and profiles
 \subsubsection{GitLab CI}
 // TODO EXPLAIN
 
+
+https://docs.gitlab.com/ee/ci/
+
+\begin{figure}[htbp!]
+	\centering
+	\includegraphics[width=0.5\textwidth]{assets/gitlab.pdf}
+	\caption{Logo of GitLab CI (\url{https://gitlab.com/})}
+	\label{fig:gitlab-ci}
+\end{figure}
+
 \subsubsection{Travis-CI}
 // TODO EXPLAIN
 
+\begin{figure}[htbp!]
+	\centering
+	\includegraphics[width=0.5\textwidth]{assets/travis-ci.pdf}
+	\caption{Logo of Travis CI (\url{https://travis-ci.com/})}
+	\label{fig:travis-ci}
+\end{figure}
+
+
 \subsubsection{GitHub Actions}
 - Github
+- Nog niet beschikbaar voor Enterprise
 - 2019
 - Gratis voor open source projecten
 - Gehost door Github (werkt ook enkel met Github projecten)
