--- a/paper/references.bib
+++ b/paper/references.bib
@@ -270,6 +270,23 @@
 	url={https://lib.ugent.be/catalog/rug01:002215083}
 }
 
+@InProceedings{JenkinsBuildOptimalization,
+	author="Rakshith, M. N.
+	and Shivaprasad, N.",
+	editor="Hemanth, D. Jude
+	and Shakya, Subarna
+	and Baig, Zubair",
+	title="Build Optimization Using Jenkins",
+	booktitle="Intelligent Data Communication Technologies and Internet of Things",
+	year="2020",
+	publisher="Springer International Publishing",
+	address="Cham",
+	pages="401--409",
+	isbn="978-3-030-34080-3"
+}
+
+@misc{maple_2016, title={Development Tools in Java: 2016 Landscape}, url={https://www.jrebel.com/blog/java-tools-and-technologies-2016}, author={Maple, Simon}, year={2016}, month={Jul}}
+
 @book{SmartJenkinsDefinitive,
 	abstract = {Streamline software development with Jenkins, the popular Java-based open source tool that has revolutionized the way teams think about Continuous Integration (CI). This complete guide shows you how to automate your build, integration, release, and deployment processes with Jenkins---and demonstrates how CI can save you time, money, and many headaches.},
 	added-at = {2017-04-30T14:39:42.000+0200},
