--- a/paper/related-work.tex
+++ b/paper/related-work.tex
@@ -1,6 +1,5 @@
 \chapter{Related work}
-
-	
+- In vorig hoofdstuk uitgelegd dat je vaak moet changes integreren -> vaak tests uitvoeren, maar dat kan miserie zijn als tests heel lang duren want dan ben je maar steeds bezig met wachten tot die tests stoppen
 
 (TODO)
 
