--- a/.latex-common/preamble.tex
+++ b/.latex-common/preamble.tex
@@ -4,11 +4,15 @@
 \usepackage[english]{babel}
 \usepackage[margin=1in]{geometry}
 \usepackage[pdftex]{graphicx}
+\usepackage{biblatex}
+\usepackage{caption}
 \usepackage{hyperref}
-\usepackage{listings}
+\usepackage{listing}
+\usepackage{listings,lstautogobble}
 \usepackage[default,scale=0.95]{opensans}
 \usepackage{scrlayer}
 \usepackage{setspace}
+\usepackage[caption=false]{subfig}
 \usepackage{titlesec}
 \usepackage{xcolor}
 
@@ -17,26 +21,76 @@
 \definecolor{code-delim}{RGB}{20,105,176}
 \colorlet{code-punct}{red!60!black}
 
-% Configuration for code listings.
-\lstdefinelanguage{json}{
-    basicstyle=\normalfont\ttfamily,
-    numbers=left,
-    numberstyle=\scriptsize,
-    stepnumber=1,
-    numbersep=8pt,
-    showstringspaces=false,
-    breaklines=true,
-    frame=lines,
-    backgroundcolor=\color{code-background},
-    literate=
-     *{:}{{{\color{code-punct}{:}}}}{1}
-      {,}{{{\color{code-punct}{,}}}}{1}
-      {\{}{{{\color{code-delim}{\{}}}}{1}
-      {\}}{{{\color{code-delim}{\}}}}}{1}
-      {[}{{{\color{code-delim}{[}}}}{1}
-      {]}{{{\color{code-delim}{]}}}}{1},
+% Custom English translations.
+\addto\extrasenglish{%
+	\def\subsubsectionautorefname{section}%
 }
 
+% Configuration for code listings.
+\lstdefinelanguage{json}{
+	basicstyle=\normalfont\ttfamily,
+	numbers=left,
+	numberstyle=\scriptsize,
+	stepnumber=1,
+	numbersep=8pt,
+	showstringspaces=false,
+	breaklines=true,
+	frame=lines,
+	backgroundcolor=\color{code-background},
+	literate=
+	*{:}{{{\color{code-punct}{:}}}}{1}
+	{,}{{{\color{code-punct}{,}}}}{1}
+	{\{}{{{\color{code-delim}{\{}}}}{1}
+	{\}}{{{\color{code-delim}{\}}}}}{1}
+	{[}{{{\color{code-delim}{[}}}}{1}
+	{]}{{{\color{code-delim}{]}}}}{1},
+}
+
+
+\newcommand\YAMLcolonstyle{\color{red}\mdseries}
+\newcommand\YAMLkeystyle{\color{black}\bfseries}
+\newcommand\YAMLvaluestyle{\color{blue}\mdseries}
+
+\makeatletter
+
+% here is a macro expanding to the name of the language
+% (handy if you decide to change it further down the road)
+\newcommand\language@yaml{yaml}
+
+\expandafter\expandafter\expandafter\lstdefinelanguage
+\expandafter{\language@yaml}
+{
+	keywords={true,false,null,y,n},
+	keywordstyle=\color{darkgray}\bfseries,
+	basicstyle=\YAMLkeystyle,                                 % assuming a key comes first
+	sensitive=false,
+	comment=[l]{\#},
+	morecomment=[s]{/*}{*/},
+	commentstyle=\color{purple}\ttfamily,
+	stringstyle=\YAMLvaluestyle\ttfamily,
+	moredelim=[l][\color{orange}]{\&},
+	moredelim=[l][\color{magenta}]{*},
+	moredelim=**[il][\YAMLcolonstyle{:}\YAMLvaluestyle]{:},   % switch to value style at :
+	morestring=[b]',
+	morestring=[b]",
+	literate =    {---}{{\ProcessThreeDashes}}3
+	{>}{{\textcolor{red}\textgreater}}1     
+	{|}{{\textcolor{red}\textbar}}1 
+	{\ -\ }{{\mdseries\ -\ }}3,
+}
+
+
+\lstset{
+	numbers=left,
+	numberstyle=\scriptsize,
+	stepnumber=1,
+	numbersep=8pt,
+	showstringspaces=false,
+	breaklines=true,
+	frame=lines,
+	backgroundcolor=\color{code-background},
+	autogobble=true
+}
 
 \titleclass{\chapter}{straight}
 
@@ -44,3 +98,10 @@
 \titlespacing*{\chapter}{0pt}{20pt}{20pt}
 
 \setcounter{secnumdepth}{5}
+
+% Default values for variables.
+\newcommand{\documentdate}{\today}
+\newcommand{\documenttitle}{Undefined "documenttitle"}
+
+% Custom macros.
+\newcommand{\bolditem}[1]{\item \textbf{#1:}}
