--- a/paper/evaluation.tex
+++ b/paper/evaluation.tex
@@ -1,6 +1,8 @@
 \chapter{Results and evaluation}
 (TODO)
 
+1904.09416.pdf heeft een hele benchmark van 35.000.000 runs
+
 - Experiment setup
 
   -  Data verzameling
