--- a/paper/references.bib
+++ b/paper/references.bib
@@ -307,3 +307,32 @@
 	username = {flint63},
 	year = 2011
 }
+
+@misc{gitlabci, title={GitLab Continuous Integration \& Delivery}, url={https://about.gitlab.com/stages-devops-lifecycle/continuous-integration/}, journal={GitLab}, publisher={GitLab}}
+
+@misc{aboutgithubactions, title={About GitHub Actions}, url={https://help.github.com/en/actions/getting-started-with-github-actions/about-github-actions}, journal={About GitHub Actions - GitHub Help}, publisher={GitHub}}
+
+@misc{githubactions, title={Features • GitHub Actions}, url={https://github.com/features/actions}, journal={GitHub}, publisher={GitHub}}
+
+@misc{gitlabdocs, title={GitLab CI/CD}, url={https://docs.gitlab.com/ee/ci/}, journal={GitLab}}
+
+@article{ciusinggitlab,
+	author = {Arefeen, Mohammed and Schiller, Michael},
+	year = {2019},
+	month = {09},
+	pages = {1-6},
+	title = {Continuous Integration Using Gitlab},
+	volume = {3},
+	journal = {Undergraduate Research in Natural and Clinical Science and Technology (URNCST) Journal},
+	doi = {10.26685/urncst.152}
+}
+
+@article{travisanalysis,
+	Author = {Thomas Durieux and Rui Abreu and Martin Monperrus and Tegawendé F. Bissyandé and Luís Cruz},
+	Title = {An Analysis of 35+ Million Jobs of Travis CI},
+	Year = {2019},
+	Eprint = {arXiv:1904.09416},
+	Howpublished = {Proceedings of the International Conference on Software
+	Maintenance and Evolution (ICSME), 2019},
+	Doi = {10.1109/icsme.2019.00044},
+}
