--- a/paper/references.bib
+++ b/paper/references.bib
@@ -336,3 +336,20 @@
 	Maintenance and Evolution (ICSME), 2019},
 	Doi = {10.1109/icsme.2019.00044},
 }
+
+@inproceedings{10.1145/1146238.1146240,
+	author = {Walcott, Kristen R. and Soffa, Mary Lou and Kapfhammer, Gregory M. and Roos, Robert S.},
+	title = {TimeAware Test Suite Prioritization},
+	year = {2006},
+	isbn = {1595932631},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/1146238.1146240},
+	doi = {10.1145/1146238.1146240},
+	booktitle = {Proceedings of the 2006 International Symposium on Software Testing and Analysis},
+	pages = {1–12},
+	numpages = {12},
+	keywords = {coverage testing, test prioritization, genetic algorithms},
+	location = {Portland, Maine, USA},
+	series = {ISSTA ’06}
+}
