--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,3 +1,4 @@
 \chapter{Conclusion and future work}
 
 (TODO)
+- TCP combieren met ideeen uit TSM om zo bepaalde tests te skippen -> Test Suite Optimisation
