--- a/paper/references.bib
+++ b/paper/references.bib
@@ -285,7 +285,7 @@
 	isbn="978-3-030-34080-3"
 }
 
-@misc{maple_2016, title={Development Tools in Java: 2016 Landscape}, url={https://www.jrebel.com/blog/java-tools-and-technologies-2016}, author={Maple, Simon}, year={2016}, month={Jul}}
+@misc{maple_2016, title={Development Tools in Java: 2016 Landscape}, url={https://www.jrebel.com/blog/java-tools-and-technologies-2016}, author={Maple, Simon}, year={2016}, month={7}}
 
 @book{SmartJenkinsDefinitive,
 	abstract = {Streamline software development with Jenkins, the popular Java-based open source tool that has revolutionized the way teams think about Continuous Integration (CI). This complete guide shows you how to automate your build, integration, release, and deployment processes with Jenkins---and demonstrates how CI can save you time, money, and many headaches.},
@@ -327,6 +327,14 @@
 	doi = {10.26685/urncst.152}
 }
 
+@ONLINE {travis2020,
+	author = "Travis",
+	title  = "Travis CI - Test and DeployYour Code with Confidence",
+	month  = "2",
+	year   = "2020",
+	url    = "https://travis-ci.org"
+}
+
 @article{travisanalysis,
 	Author = {Thomas Durieux and Rui Abreu and Martin Monperrus and Tegawendé F. Bissyandé and Luís Cruz},
 	Title = {An Analysis of 35+ Million Jobs of Travis CI},
@@ -352,4 +360,42 @@
 	keywords = {coverage testing, test prioritization, genetic algorithms},
 	location = {Portland, Maine, USA},
 	series = {ISSTA ’06}
+}
+
+@inbook{evaluationoftestsuiteminimization,
+	author = {Noemmer, Raphael and Haas, Roman},
+	year = {2019},
+	month = {12},
+	pages = {51-66},
+	title = {An Evaluation of Test Suite Minimization Techniques},
+	isbn = {978-3-030-35509-8},
+	doi = {10.1007/978-3-030-35510-4_4}
+}
+
+@article{10.1002/stv.430,
+	author = {Yoo, S. and Harman, M.},
+	title = {Regression Testing Minimization, Selection and Prioritization: A Survey},
+	year = {2012},
+	issue_date = {March 2012},
+	publisher = {John Wiley and Sons Ltd.},
+	address = {GBR},
+	volume = {22},
+	number = {2},
+	issn = {0960-0833},
+	url = {https://doi.org/10.1002/stv.430},
+	doi = {10.1002/stv.430},
+	journal = {Softw. Test. Verif. Reliab.},
+	month = mar,
+	pages = {67–120},
+	numpages = {54},
+	keywords = {regression test selection, regression testing, test case prioritization, test suite minimization}
+}
+
+@book{10.5555/574848,
+	author = {Garey, Michael R. and Johnson, David S.},
+	title = {Computers and Intractability; A Guide to the Theory of NP-Completeness},
+	year = {1990},
+	isbn = {0716710455},
+	publisher = {W. H. Freeman \& Co.},
+	address = {USA}
 }
