--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -8,6 +8,11 @@
 % Add the references.
 \addbibresource{references.bib}
 
+% Macro's
+\newcommand{\tsm}{Test Suite Minimisation}
+\newcommand{\tcp}{Test Case Prioritisation}
+\newcommand{\tcs}{Test Case Selection}
+
 \begin{document}
 \input{../.latex-common/titlepage.tex}
 \onehalfspacing
