--- a/paper/related-work/approaches/tsm.tex
+++ b/paper/related-work/approaches/tsm.tex
@@ -1,6 +1,7 @@
-% !TeX root = ../thesis.tex
+% !TeX root = ../../thesis.tex
 
 \subsection{\tsm{}}
+\label{ssec:tsm}
 \tsm{}, also referred to as \emph{Test Suite Reduction}, aims to reduce the size of the test suite by permanently removing redundant tests. This problem is formally defined by Rothermel in \autoref{def:tsm} \cite{10.1002/stv.430}. 
 
 \begin{definition}[\tsm{}]
