--- a/paper/evaluation.tex
+++ b/paper/evaluation.tex
@@ -10,3 +10,9 @@
   - Bespreek de geselecteerde projecten
   
 - Resultaat van toepassing van alle algoritmes op alle projecten, met wat grafieken
+
+- travistorrent.testroots.org -> zie die site voor cite source; gehost op gcp
+
+- dodona
+
+- onderzoek op dat travistorrent ding of het klopt dat tests de tendency te hebben om te falen in volgende commits
