--- a/paper/velocity.tex
+++ b/paper/velocity.tex
@@ -1,3 +1,5 @@
+% !TeX root = thesis.tex
+
 \chapter{Proposed framework: VeloCIty}
 \label{chap:velocity}
 (TODO)
@@ -26,3 +28,14 @@
 - Out of the box support om tests binnen eenzelfde klasse in volgorde uit te voeren, maar niet class-wide support
 - Na elke uitvoering van een test wordt een nieuwe processor aangemaakt met een filter op de methodnaam, dit heeft als nadeel dat hergebruiken van initialisaties niet gaat. Misschien hier nog iets op vinden
 - Parallelliseren momenteel niet gesupport, geen idee hoe dat zou werken met een volgorde (kan niet gewoon verdelen in volgorde want stel dat 1 test heel lang duurt dan is die volgorde niet meer juist)
+- Shortcuts genomen wegens problemen met gradle (shaded jars) -> bepaalde JUnit functionaliteit weggegooid (vooral @Ignored annotatie)
+
+Na elke uitvoering van test wordt coverage data bijgehouden om later te analyseren door test processor hack (maak hier zo'n mooi ding van).
+
+Coverage data formaat optimaliseren zodat xmlfile niet gigantisch groot wordt -> done
+
+Algoritmes aanpassen zodat branches ook rekening mee gehouden wordt (stel dat test A lijn 5 covert en test B ook, maar lijn 5 is een if-statement met 2 condities en test A triggert enkel de eerste conditie, dan zal test B met lagere prioriteit worden uitgevoerd of zelfs niet omdat de lijn al gecoverd is) -> eventueel via mutator die branches naar lijnen uitsplitst in zowel tests als source
+
+Andere programmeertalen kunnen op zelfde manier door tests sequentieel uit te voeren
+
+%<https://rubygems.org/gems/reverse_coverage/
