--- a/paper/references.bib
+++ b/paper/references.bib
@@ -172,6 +172,16 @@
 	publisher={Lulu.com}
 }
 
+@ARTICLE{5487526,
+	author={Y. {Jia} and M. {Harman}},
+	journal={IEEE Transactions on Software Engineering},
+	title={An Analysis and Survey of the Development of Mutation Testing},
+	year={2011},
+	volume={37},
+	number={5},
+	pages={649-678}
+}
+
 @ONLINE {jimhighsmith2001,
 	author = "Jim Highsmith",
 	title  = "History: The Agile Manifesto",
