--- a/paper/references.bib
+++ b/paper/references.bib
@@ -182,6 +182,21 @@
 	pages={649-678}
 }
 
+@Inbook{Offutt2001,
+	author="Offutt, A. Jefferson
+	and Untch, Roland H.",
+	editor="Wong, W. Eric",
+	title="Mutation 2000: Uniting the Orthogonal",
+	bookTitle="Mutation Testing for the New Century",
+	year="2001",
+	publisher="Springer US",
+	address="Boston, MA",
+	pages="34--44",
+	isbn="978-1-4757-5939-6",
+	doi="10.1007/978-1-4757-5939-6_7",
+	url="https://doi.org/10.1007/978-1-4757-5939-6_7"
+}
+
 @ONLINE {jimhighsmith2001,
 	author = "Jim Highsmith",
 	title  = "History: The Agile Manifesto",
