--- a/paper/references.bib
+++ b/paper/references.bib
@@ -387,6 +387,15 @@
 	series = {ISSTA ’06}
 }
 
+@book{10.5555/1614191,
+	author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L. and Stein, Clifford},
+	title = {Introduction to Algorithms, Third Edition},
+	year = {2009},
+	isbn = {0262033844},
+	publisher = {The MIT Press},
+	edition = {3rd}
+}
+
 @inbook{evaluationoftestsuiteminimization,
 	author = {Noemmer, Raphael and Haas, Roman},
 	year = {2019},
