--- a/paper/related-work/algorithms.tex
+++ b/paper/related-work/algorithms.tex
@@ -1,6 +1,6 @@
 % !TeX root = ../thesis.tex
 
 \section{Algorithms}
-In \autoref{ssec:tsm} I have already mentioned that applying Test Suite Minimisation is essentially the same as finding the minimal hitting set of the test suite and the set of requirements, which is an NP-complete problem. Therefore, we require the use of heuristics that are already known to solve other, similar problems.
+In \autoref{ssec:tsm} I have already mentioned that applying Test Suite Minimisation is essentially the same as finding the minimal hitting set of the test suite and the set of requirements, which is an NP-complete problem. Therefore, we require the use of \emph{heuristics} that are already known to literature to solve other, related problems. A heuristic is an experience-based method that can be used to solve a hard to compute problem by finding a fast approximation \cite{6588537}. However, the found solution will mostly be suboptimal or might sometimes even fail to find any solution at all.
 
-\subsection{Greedy algorithm}
+\input{related-work/algorithms/greedy.tex}
