--- a/.latex-common/preamble.tex
+++ b/.latex-common/preamble.tex
@@ -7,6 +7,8 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 \usepackage{biblatex}
 \usepackage{caption}
 \usepackage{changepage}
