--- a/paper/acknowledgments.tex
+++ b/paper/acknowledgments.tex
@@ -1,3 +1,15 @@
 \chapter*{Acknowledgements}
 
-(TODO)
+Completing this thesis would not have been possible without the help and support of many people, some of which I want to thank personally.\\
+
+\noindent First of all I want to thank prof. dr. Bruno Volckaert and prof. dr. ir. Filip De Turck for allowing me to propose my own subject and for their prompt and clear responses to every question I have asked. I especially want to thank you for giving me the permission to insert a two-week hiatus during the Easter break, so I could help out on the UGent Dodona project.\\
+
+\noindent Secondly I want to express my gratitude towards both of my counsellors, Jasper Vaneessen and Dwight Kerkhove, for their overall guidance, availability, and to steer me into researching this topic in the first place.\\
+
+\noindent Furthermore I want to thank my parents, my brother Stijn and my family for convincing me and giving me the possibility to study at the university, to support me throughout my entire academic career and to provide me the opportunity to pursue my childhood dreams.\\
+
+\noindent Last, but definitely not least, I want to thank my amazing friends, a few of them in particular. My best friend Robbe, for always being there when I need him, even when I least expect it, for both supporting as well as protecting me against my sometimes unrealistic ideas and ambition to excel. Helena for never leaving my side, for always making me laugh even when I don't want to, and most importantly to remind me that I should relax more often. Jana for my daily dose of laughter and fun, and for her inexhaustible positivity. Tobiah for the endless design discussions and for outperforming me in almost every school project, encouraging me to continuously raise the bar and never give up. Finally I want to thank Doortje and Freija for regularly asking about my thesis progression and to motivate me to keep working, despite not understanding a single word of it.\\
+
+\noindent \emph{Thank you.}\\
+
+\noindent Pieter -- Ghent 2020
