--- a/paper/related-work/algorithms/greedy.tex
+++ b/paper/related-work/algorithms/greedy.tex
@@ -1,12 +1,29 @@
 % !TeX root = ../../thesis.tex
 
 \subsection{Greedy algorithm}
-The first algorithm is a \emph{greedy} heuristic, which was originally designed to find an approximation for the set-covering problem \cite{evaluationoftestsuiteminimization}. A greedy algorithm always makes a locally optimal choice, assuming that this will eventually lead to a globally optimal solution \cite{10.5555/1614191}. Algorithm \ref{alg:tsm-greedy} presents the Greedy algorithm for \tsm{}. The greedy aspect in this algorithm is to always select the test case that contributes the most additional coverage.
+The first algorithm is a \emph{greedy} heuristic, which was originally designed to find an approximation for the set-covering problem \cite{evaluationoftestsuiteminimization}. A greedy algorithm always makes a locally optimal choice, assuming that this will eventually lead to a globally optimal solution \cite{10.5555/1614191}. Algorithm \ref{alg:tsm-greedy} presents the Greedy algorithm for \tsm{}. The goal of the algorithm is to construct a set of test cases that cover every line in the code, by requiring as few tests as possible.\\
 
-\begin{algorithm}
-\caption{Greedy algorithm for TSM}
+\noindent Initially, the algorithm starts with an empty set $RS$, the set $TS$ of all tests and the set $C$ of all source code lines that are covered by at least one test $t \in T$. Furthermore, $t_l$ denotes the set of lines in $C$ that are covered by test $t$. Subsequently, the algorithm iteratively selects tests from $TS$ and adds them to $RS$. The locally optimal choice is to always select the test case that will contribute the most still uncovered lines, ergo the test $t$ for which the cardinality of the intersection between $C$ and $t_c$ is maximal. After every iteration, the lines $t_c$ are removed from $C$ and the selection process is repeated until $C$ is empty. Upon running the tests, only the tests in $RS$ must be executed. In order to apply this algorithm to \tcp{}, the set $RS$ must be converted to a list and the tests must be executed in the order in which they were inserted to $RS$.
+
+\begin{algorithm}[h!]
+\caption{Greedy algorithm for \tsm{}}
 \label{alg:tsm-greedy}
 \begin{algorithmic}[1]
-	\State $true$
+	\State {\bfseries Input:} Set $TS$ of all tests, set $C$ of all source code lines that are covered by any $t \in TS$.
+	\State {\bfseries Output:} Subset $RS \subseteq TS$ of tests to execute.
+	\State $RS \gets \emptyset$
+	\While{$C \neq \emptyset$}
+		\State $T^{'} \gets 0$
+		\State $T_{c}^{'} \gets \emptyset$
+		\ForAll{$t \in TS$}
+			\If{$|C \cap t_{c}| > |T_{c}^{'}|$}
+				\State $T^{'} \gets t$
+				\State $T_{c}^{'} \gets C \cap t_{c}$
+			\EndIf
+		\EndFor
+		
+		\State $RS \gets RS \cup \{T^{'}\}$
+		\State $C \gets C \setminus T_{c}^{'}$
+	\EndWhile
 \end{algorithmic}
 \end{algorithm}
